Explicitly shows up error

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,15 @@
 @import "pod-styles";
 
 /* LAYOUT */
+
+body {
+  margin-top: 60px;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex--vertical {
+  flex-direction: column;
+}
