--- a/app/templates/components/rules/create-rule.hbs
+++ b/app/templates/components/rules/create-rule.hbs
@@ -11,7 +11,7 @@
         <label for="rulePredicate">Predicate</label>
         <select id="rulePredicate" onchange={{action "setSelection" value="target.value"}}>
          <option> -- Any or All? -- </option>
-          {{#each rService.predicates as | predicate |}}
+          {{#each rService.predicateList as | predicate |}}
             <option value={{predicate}}>{{predicate}}</option>
           {{/each}}
         </select>
@@ -24,7 +24,7 @@
           <div class="flex">
             <select id="ruleFields" onchange={{action (action "setField" ruleObj) value="target.value"}}>
              <option> Select field </option>
-              {{#each rService.fields as | field |}}
+              {{#each rService.fieldsList as | field |}}
                 <option value={{field}}>{{field}}</option>
               {{/each}}
             </select>
@@ -32,8 +32,10 @@
           <div class="flex">
             <select id="ruleConditions" onchange={{action (action "setCondition" ruleObj) value="target.value"}}>
              <option> Select conditions </option>
-              {{#each rService.conditions as | condition |}}
+              {{#each rService.conditionsList as | condition |}}
+                {{#if (eq condition.type rValue)}}
                 <option value={{condition.code}}>{{condition.name}}</option>
+                {{/if}}
               {{/each}}
             </select>
           </div>
@@ -46,6 +48,17 @@
           </div>
         </div>
     {{/each}}
+    <div class="flex form_actions">
+      <select id="ruleFields" onchange={{action (action "setAction") value="target.value"}}>
+        <option> Select action </option>
+          {{#each rService.actionList as | _action |}}
+            <option value={{_action.type}}>{{_action.name}}</option>
+          {{/each}}
+        </select>
+        <div class="error">
+          {{#each rService.rule.errors.action as |err|}} {{err.message}} {{/each}}
+        </div>
+      </div>
     <br>
     <button {{action 'saveRule'}}>Save</button>
   </form>
