List Rule Edit option available

--- a/app/templates/components/rules/list-rule.hbs
+++ b/app/templates/components/rules/list-rule.hbs
@@ -20,7 +20,10 @@
           {{/each}}
         </th>
         <th>{{data.action}}</th>
-        <th><button {{action 'delete' data}}>Delete</button></th>
+        <th>
+          <button {{action 'edit' data}}>Edit</button>
+            <button {{action 'delete' data}}>Delete</button>
+        </th>
       </tr>
     {{/each}}
   </tbody>
