--- a/app/templates/rule/index.hbs
+++ b/app/templates/rule/index.hbs
@@ -1,3 +1,3 @@
-{{rules/list-rule model=pagedContent }}
+{{rules/list-rule model=pagedContent goToEdit=(action 'goToEdit') }}
  
 {{page-numbers content=pagedContent}}
