Fixes Alignment issues

--- a/app/templates/components/head-er.hbs
+++ b/app/templates/components/head-er.hbs
@@ -1,5 +1,5 @@
 <div class="flex header">
   <div class="flex title">
-    FoxIn - {{#link-to 'rule.index'}}List View{{/link-to}} - {{#link-to 'rule.add'}}Add Rule{{/link-to}}
+    FoxIn - {{#link-to "rule.index"}}List View{{/link-to}} - {{#link-to "rule.add"}}Add Rule{{/link-to}}
   </div>
 </div>
