--- a/app/templates/rule/index.hbs
+++ b/app/templates/rule/index.hbs
@@ -1,3 +1,3 @@
-{{rules/list-rule model=pagedContent goToEdit=(action "goToEdit") }}
+{{rules/list-rule model=pagedContent search=search goToEdit=(action "goToEdit") }}
  
 {{page-numbers content=pagedContent}}
