--- a/app/styles/component-styles/rules/list-rule.scss
+++ b/app/styles/component-styles/rules/list-rule.scss
@@ -15,6 +15,19 @@
     }
   }
 
+  .select {
+    height: 30px;
+    select {
+      height: 30px;
+    }
+
+    label {
+      @extend .flex;
+      align-items: center;
+      padding:0 10px;
+    } 
+  }
+
   .table {
     width: 100%;
     max-width: 100%;
