--- a/app/templates/components/rules/list-rule.hbs
+++ b/app/templates/components/rules/list-rule.hbs
@@ -1,6 +1,15 @@
 <div class="flex search">
-  <label class="flex">Search</label>
-  {{input type="text" value=search}}
+  <div class="flex">
+    <label class="flex">Search</label>
+    {{input type="text" value=search}}
+  </div>
+  <div class="flex select">
+    <label>Sortby</label>
+    <select onchange={{action (action "sortBy") value="target.value"}}>
+      <option value="asc">asc</option>
+      <option value="desc">desc</option>
+    </select>
+  </div>
 </div>
 <div class="flex table">
   <table>
